--- a/index1.html
+++ b/index1.html
@@ -1,6 +1,6 @@
 <html>
 <h>new html</h>
 <body>
- <p> This is paragraph1----------</p>
+ <p>--------- This is another  paragraph1----------</p>
 </body>
 </html>
